<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Shop Detail"
            android:textColor="#FFFFFF"
            android:textSize="22dp" />

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tvLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latitude"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLat"
                android:layout_marginTop="4dp"
                android:text="Longitude"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/ivUploadPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/upload"
                android:contentDescription="@null"/>

            <Spinner
                android:id="@+id/spShopStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:popupBackground="@color/transparent"/>

            <EditText
                android:id="@+id/etShopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/shop_name"/>

            <EditText
                android:id="@+id/etContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"
                android:hint="@string/shop_owner_name"/>

            <EditText
                android:id="@+id/etOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"
                android:hint="@string/shop_contact_number"/>

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"
                android:hint="@string/shop_address"/>

            <EditText
                android:id="@+id/etState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"
                android:hint="@string/state"/>

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"
                android:hint="@string/city"/>

            <Spinner
                android:id="@+id/spVariants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:popupBackground="@color/transparent"/>

            <Spinner
                android:id="@+id/spScheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:popupBackground="@color/transparent"/>

            <EditText
                android:id="@+id/etRemarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"
                android:hint="@string/remarks"/>

            <Spinner
                android:id="@+id/spGiveStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:popupBackground="@color/transparent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/buton_background"
                    android:text="@string/cancel"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/buton_background"
                    android:text="@string/next"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>
